--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,20 +5,15 @@
     'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
     monospace;
   font-size: 14px;
-  background-color: #2d2d2d;
-  color: #fff;
+  background-color: #f2f6f9;
+  color: #333;
   z-index: 0;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  border-bottom: 1px solid #fff;
 }
 
 .gatsby-highlight {
   padding: 1.575rem;
   margin-bottom: 1.575rem;
   background: #2d2d2d;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
   position: relative;
 }
 
@@ -29,7 +24,7 @@
   padding: 3px 10px;
   font-size: 12px;
   text-align: right;
-  color: #fff;
+  color: #333;
   font-weight: 700;
   letter-spacing: 0.8px;
   text-transform: uppercase;
@@ -49,11 +44,22 @@ pre[class*='language-'] {
 .gatsby-highlight pre[class='language-typescript']::before {
   content: 'ts';
   background: #006ec5;
+  color: #fff;
+}
+
+.gatsby-highlight pre[class='language-shell']::before {
+  content: 'shell';
+  background: #f2f6f9;
+}
+
+.gatsby-highlight pre[class='language-json']::before {
+  content: 'json';
+  background: #f08d49;
+  color: #333;
 }
 
 :not(pre) > code[class*='language-'] {
   padding: 5px !important;
-  border-radius: 0 !important;
   background: #f2f6f9 !important;
   color: #333 !important;
 }
