--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
     'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
     monospace;
   font-size: 14px;
-  background-color: #f2f6f9;
+  background-color: #e0e0e0;
   color: #333;
   margin-left: -1.575rem;
   margin-right: -1.575rem;
