--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,8 +5,9 @@
     'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
     monospace;
   font-size: 14px;
-  background-color: #e0e0e0;
-  color: #333;
+  background-color: #007acc;
+  color: #fff;
+  font-weight: 500;
   margin-left: -1.575rem;
   margin-right: -1.575rem;
 }
@@ -16,7 +17,7 @@
   margin-bottom: 1.575rem;
   margin-left: -1.575rem;
   margin-right: -1.575rem;
-  background: #2d2d2d;
+  background: #011627;
   position: relative;
   overflow: auto;
 }
@@ -76,13 +77,17 @@
 }
 
 :not(pre) > code[class*='language-'] {
-  padding: 5px !important;
-  background: #f2f6f9 !important;
-  color: #333 !important;
+  background: #f1f2f5 !important;
+  color: #333;
+}
+
+body.dark :not(pre) > code[class*='language-'] {
+  background: #2d2d2d !important;
+  color: #fff;
 }
 
 .gatsby-highlight-code-line {
-  background-color: #000;
+  background-color: #0e2334;
   display: block;
   margin-right: -1.575rem;
   margin-left: -1.575rem;
@@ -109,4 +114,31 @@
 
 .pagination a {
   box-shadow: none;
+}
+
+body.dark {
+  -webkit-font-smoothing: antialiased;
+
+  background-color: rgb(27, 31, 42);
+  color: rgba(255, 255, 255, 0.88);
+}
+
+body.dark a {
+  color: #33adff;
+}
+
+body.dark .post-social {
+  background-color: #011627;
+}
+
+.dark-mode-toggle .react-toggle-track-x,
+.dark-mode-toggle .react-toggle-track-check {
+  width: 16px;
+  height: 16px;
+}
+
+.dark-mode-toggle.react-toggle .react-toggle-track,
+.dark-mode-toggle.react-toggle:hover:not(.react-toggle--disabled)
+  .react-toggle-track {
+  background-color: #33adff;
 }
