--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,6 @@
 .gatsby-code-title {
   padding: 1.05rem 1.575rem 0.525rem;
-  font-family: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
-    'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
-    'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
-    monospace;
+  font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-size: 14px;
   background-color: #007acc;
   color: #fff;
