add style hooks post

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -164,3 +164,7 @@ body.dark blockquote p {
   font-weight: 700;
   text-align: center;
 }
+
+.gatsby-resp-image-figcaption {
+  text-align: center;
+}
